--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 			.footnote {
 				position:fixed; right:1%; bottom:1%; padding:0; border:0;
 			}
+			#experience, #skills, #languages {
+				scroll-margin-top: 100px;
+			}
 		</style>
 	</head>
 
@@ -69,7 +72,7 @@
 				</span>
 			</div></div>
 
-		<div class="mainbody">
+		<div class="mainbody" id="experience">
 			<f1><b>Work Experience</b></f1><br><br>
 			<div style="padding-left:20px">
 				<f3>Data Scientist / Machine Learning Engineer</f3><br>
@@ -83,7 +86,7 @@
 				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>				
 				<br><b>Forecast Reusable Asset (FORA)</b><br>
 				Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins<br>
-				Integrate and implement forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams<br>
+				Implemented end-to-end forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams<br>
 				Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift<br>
 				Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1000 user completions to date<br>
 				Voted top Reusable Asset (RA) in RA Learning Festival 2020<br>
@@ -97,6 +100,11 @@
 				<br><b>Others</b><br>
 				Second most active Coursera user, based on course completion, in the company in 2018<br>
 				Represented Musicians Interest Group in DBS Dinner and Dance 2019, playing keyboard in a live band of 10 people<br>
+				<br><br>
+				<f3>Assistant Lecturer</f3><br>
+				<f3>National University of Singapore (NUS), School of Computing</f3><br>
+				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
+				Artificial Intelligence Computing Course (AICC): Designed to equip NUS administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework<br>
 				<br><br>
 				<f3>Systems Engineer</f3><br>
 				<f3>inlingua School of Languages</f3><br>
@@ -158,7 +166,7 @@
 		</div>
 		<br><br>
 
-		<div class="mainbody">
+		<div class="mainbody" id="skills">
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div style="padding-left:20px">
 				<f3>Programming Languages/Tools</f3><br>
@@ -184,7 +192,7 @@
 		</div>
 		<br><br>
 
-		<div class="mainbody">
+		<div class="mainbody" id="languages">
 			<f1><b>Languages</b></f1><br><br>
 			<div style="padding-left:20px">
 				<f3>Cantonese</f3><br>
