--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Other Projects</b><br>
-				Performed multi-label classification to classify customer segments in Mortgage Pricing project<br>
+				Performed multi-class classification to classify customer segments in Mortgage Pricing project<br>
 				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
 				Implemented best practices workflow in multiple projects by setting up integration testing of codes<br>
 				Have experience with Kedro-style pipelines<br>
