Updated job responsibilities

--- a/index.html
+++ b/index.html
@@ -83,17 +83,20 @@
 				Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call<br>
 				Initiated and single-handedly improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
 				Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
-				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>				
+				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
 				<br><b>Forecast Reusable Asset (FORA)</b><br>
 				Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins<br>
 				Implemented end-to-end forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams<br>
+				Held workshops, demonstrations, project presentations and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID<br>
 				Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift<br>
 				Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1000 user completions to date<br>
 				Voted top Reusable Asset (RA) in RA Learning Festival 2020<br>
+				<br><b>Mortgage Project</b><br>
+				Developed pricing model with multi-class classification to classify customer segments<br>
+				Managed project deliverables and deployment plans<br>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Other Projects</b><br>
-				Performed multi-class classification to classify customer segments in Mortgage Pricing project<br>
 				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
 				Implemented best practices workflow in multiple projects by setting up integration testing of codes<br>
 				Have experience with Kedro-style pipelines<br>
@@ -101,11 +104,14 @@
 				Second most active Coursera user, based on course completion, in the company in 2018<br>
 				Represented Musicians Interest Group in DBS Dinner and Dance 2019, playing keyboard in a live band of 10 people<br>
 				<br><br>
+
 				<f3>Assistant Lecturer</f3><br>
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
-				Artificial Intelligence Computing Course (AICC): Designed to equip NUS administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework<br>
+				Artificial Intelligence Computing Course (AICC): Designed to equip NUS Executive and Administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework<br>
+				Responsible for conducting teaching sessions in flipped classroom model and grading of projects<br>
 				<br><br>
+
 				<f3>Systems Engineer</f3><br>
 				<f3>inlingua School of Languages</f3><br>
 				<div class="justifybox"><b>Jan 2018 - Jun 2018<div class="nav">Singapore</b></div></div>
@@ -114,6 +120,7 @@
 				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
 				Applied the knowledge of Tableau for data discovery, Python for forecasting, AMPL for timetable optimization and JavaScript for data visualization<br>
 				<br><br>
+
 				<f3>Management Intern</f3><br>
 				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
 				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
@@ -122,6 +129,7 @@
 				Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks<br>
 				Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 				<br><br>
+
 				<f3>Project Leader</f3><br>
 				<f3>Singapore Bus Service (SBS) Transit</f3><br>
 				<div class="justifybox"><b>Jan 2017 - Apr 2017<div class="nav">Singapore</b></div></div>
@@ -130,6 +138,7 @@
 				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
 				Applied the knowledge of Python for data discovery and R for data visualization<br>
 				<br><br>
+
 				<f3>Project Member</f3><br>
 				<f3>YCH Group</f3><br>
 				<div class="justifybox"><b>Jan 2017 - Apr 2017<div class="nav">Singapore</b></div></div>
@@ -138,6 +147,7 @@
 				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
 				Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation<br>
 				<br><br>
+
 				<f3>Project Leader</f3><br>
 				<f3>Park Avenue Hotel</f3><br>
 				<div class="justifybox"><b>Sep 2016 - Dec 2016<div class="nav">Singapore</b></div></div>
@@ -146,18 +156,21 @@
 				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
 				Applied the knowledge of SQL for data storage and processing and R extensively for cleaning industry data, find correlation and visualise data<br>
 				<br><br>
+
 				<f3>Campus Ambassador</f3><br>
 				<f3>Deutsche Bank</f3><br>
 				<div class="justifybox"><b>Aug 2016 - Present<div class="nav">Singapore</b></div></div>
 				Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank<br>
 				Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies<br>
 				<br><br>
+
 				<f3><b>Daycare Tutor</b></f3><br>
 				<f3>Dajin Daycare</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Apr 2015<div class="nav">Singapore</b></div></div>
 				Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate<br>
 				Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class<br>
 				<br><br>
+
 				<f3>Private Tutor</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Oct 2015<div class="nav">Singapore</b></div></div>
 				Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science<br>
