--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 				<f3>Campus Ambassador</f3><br>
 				<f3>Deutsche Bank</f3><br>
-				<div class="justifybox"><b>Aug 2016 - Present<div class="nav">Singapore</b></div></div>
+				<div class="justifybox"><b>Aug 2016 - Aug 2017<div class="nav">Singapore</b></div></div>
 				Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank<br>
 				Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies<br>
 				<br><br>
