Remove education details in cv

--- a/index.html
+++ b/index.html
@@ -114,15 +114,6 @@
 				Responsible for conducting teaching sessions in flipped classroom model and grading of projects<br>
 				<br><br>
 
-				<f3>Systems Engineer</f3><br>
-				<f3>inlingua School of Languages</f3><br>
-				<div class="justifybox"><b>Jan 2018 - Jun 2018<div class="nav">Singapore</b></div></div>
-				Capstone (FYP): inlingua School of Languages<br>
-				Worked with a team of 6 to increase the use of data analytics and reduce manual workflow inefficiencies within the company<br>
-				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
-				Applied the knowledge of Tableau for data discovery, Python for forecasting, AMPL for timetable optimization and JavaScript for data visualization<br>
-				<br><br>
-
 				<f3>Management Intern</f3><br>
 				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
 				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
@@ -132,31 +123,10 @@
 				Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 				<br><br>
 
-				<f3>Project Leader</f3><br>
-				<f3>Singapore Bus Service (SBS) Transit</f3><br>
-				<div class="justifybox"><b>Jan 2017 - Apr 2017<div class="nav">Singapore</b></div></div>
-				Network Modeling: SBS Network<br>
-				Led a team of 4 to find out relationship between the bus services in Singapore given a network model<br>
-				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
-				Applied the knowledge of Python for data discovery and R for data visualization<br>
-				<br><br>
-
-				<f3>Project Member</f3><br>
-				<f3>YCH Group</f3><br>
-				<div class="justifybox"><b>Jan 2017 - Apr 2017<div class="nav">Singapore</b></div></div>
-				Operations Management: Inventory Level Optimizing<br>
-				Worked with a team of 5 to forecast demand to optimize inventory planning and restocking policy<br>
-				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
-				Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation<br>
-				<br><br>
-
-				<f3>Project Leader</f3><br>
-				<f3>Park Avenue Hotel</f3><br>
-				<div class="justifybox"><b>Sep 2016 - Dec 2016<div class="nav">Singapore</b></div></div>
-				Engineering Systems Design: Maximising Revenue per Available Time-Based Unit<br>
-				Led a group of 4 to determine the ideal hotel rate based on occupancy rate forecast and other variables in order to maximize revenue<br>
-				Details of project is elaborated in Education and Projects > Industry Projects tab<br>
-				Applied the knowledge of SQL for data storage and processing and R extensively for cleaning industry data, find correlation and visualise data<br>
+				<f3><b>Music Teacher</b></f3><br>
+				<f3>Cristofori</f3><br>
+				<div class="justifybox"><b>Dec 2017 - Jul 2018<div class="nav">Singapore</b></div></div>
+				Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre<br>
 				<br><br>
 
 				<f3>Campus Ambassador</f3><br>
