--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Other Projects</b><br>
 				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
-				Implemented best practices workflow in multiple projects by setting up integration testing of codes<br>
+				Implemented best practices workflow in multiple projects by setting up integration testing of codes and enabling distributed processing<br>
 				Have experience with Kedro-style pipelines<br>
 				<br><b>Others</b><br>
 				Spot Award recipient for 2021 Feb and 2021 Jun, and Star Award recipient for first half of 2021 for exemplary work performance<br>
