--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<br><b>Mortgage Project</b><br>
 				Developed pricing model with multi-class classification to classify customer segments<br>
 				Improved data pipeline architecture, resulting in 85% time savings<br>
-				Managed project deliverables and deployment plans<br>
+				Managed project deliverables, deployment plans and drove project to deployment in 6 months<br>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Other Projects</b><br>
