--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				Voted top Reusable Asset (RA) in RA Learning Festival 2020<br>
 				<br><b>Mortgage Project</b><br>
 				Developed pricing model with multi-class classification to classify customer segments<br>
-				Improved data pipeline architecture, resulting in 85% time savings<br>
+				Improved existing data pipeline architecture, resulting in 85% time savings<br>
 				Managed project deliverables, deployment plans and drove project to deployment in 6 months<br>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
