--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				Implemented best practices workflow in multiple projects by setting up integration testing of codes and enabling distributed processing<br>
 				Have experience with Kedro-style pipelines<br>
 				<br><b>Others</b><br>
-				Spot Award recipient for 2021 Feb and 2021 Jun, and Star Award recipient for first half of 2021 for exemplary work performance<br>
+				Spot Award recipient for 2021 Feb, Jun and Oct, and Star Award recipient for first half of 2021 for exemplary work performance<br>
 				Second most active Coursera user, based on course completion, in the company in 2018<br>
 				Represented Musicians Interest Group in DBS Dinner and Dance 2019, playing keyboard in a live band of 10 people<br>
 				<br><br>
