--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<br><b>Others</b><br>
 				Spot Award recipient for 2021 Feb, Jun and Oct, and Star Award recipient for first half of 2021 for exemplary work performance<br>
 				Second most active Coursera user, based on course completion, in the company in 2018<br>
-				Represented Musicians Interest Group in DBS Dinner and Dance 2019, playing keyboard in a live band of 10 people<br>
+				Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard<br>
 				<br><br>
 
 				<f3>Assistant Lecturer</f3><br>
