--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 			a:link {color: white; text-decoration: none;}
 			a:visited {color: white;}
 			a:hover {color: #FFD700;}
+			ul {list-style: none; margin: 3px; margin-bottom: 0; padding: 0;}
+			ul li:before {content: '✓ ';}
+			ul.award li:before {content: '☆ ';}
 			.banner {
 				background-color: black; position: fixed; z-index: 999; top: 0; left: 0; right: 0; width: 99%;
 				height: auto; border-bottom: 2px solid #FFD700;
@@ -80,72 +83,99 @@
 				<div class="justifybox"><b>Aug 2018 - Present<div class="nav">Singapore</b></div></div>
 				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 				<br><b>Call Centre Call Reduction Project (CCTR)</b><br>
-				Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call<br>
-				Initiated and single-handedly improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
-				Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
-				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
+				<ul>
+					<li>Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
+					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours</li>
+					<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making</li>
+					<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
+				</ul>
 				<br><b>Forecast Reusable Asset (FORA)</b><br>
-				Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins<br>
-				Implemented end-to-end forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams<br>
-				Held workshops, demonstrations, project presentations and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID<br>
-				Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift<br>
-				Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date<br>
-				Voted top Reusable Asset (RA) in RA Learning Festival 2020<br>
+				<ul>
+					<li>Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
+					<li>Implemented end-to-end forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams</li>
+					<li>Held workshops, demonstrations, project presentations and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
+					<li>Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
+					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
+					<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
+				</ul>
 				<br><b>Mortgage Project</b><br>
-				Developed pricing model with multi-class classification to classify customer segments<br>
-				Improved existing data pipeline architecture, resulting in 85% time savings<br>
-				Managed project deliverables, deployment plans and drove project to deployment in 6 months<br>
+				<ul>
+					<li>Developed pricing model with multi-class classification to classify customer segments</li>
+					<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
+					<li>Managed project deliverables, deployment plans and drove project to deployment in 6 months</li>
+				</ul>
 				<br><b>Feature Mart Reusable Asset</b><br>
-				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
+				<ul>
+					<li>Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required</li>
+				</ul>
 				<br><b>Other Projects</b><br>
-				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
-				Implemented best practices workflow in multiple projects by setting up integration testing of codes and enabling distributed processing<br>
-				Have experience with Kedro-style pipelines<br>
+				<ul>
+					<li>Performed email clustering using different text cleaning and embedding methods and machine learning models</li>
+					<li>Implemented best practices workflow in multiple projects by setting up integration testing of codes and enabling distributed processing</li>
+					<li>Have experience with Kedro-style pipelines</li>
+				</ul>
 				<br><b>Others</b><br>
-				Spot Award recipient for 2021 Feb, Jun and Oct, and Star Award recipient for first half of 2021 for exemplary work performance<br>
-				Second most active Coursera user, based on course completion, in the company in 2018<br>
-				Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard<br>
+				<ul class="award">
+					<li>Spot Award recipient for 2021 Feb, Jun and Oct, and Star Award recipient for first half of 2021 for exemplary work performance</li>
+					<li>Second most active Coursera user, based on course completion, in the company in 2018</li>
+					<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard</li>
+				</ul>
 				<br><br>
 
 				<f3>Assistant Lecturer</f3><br>
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Present<div class="nav">Singapore</b></div></div>
-				Artificial Intelligence Computing Course (AICC): Designed to equip NUS Executive and Administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework<br>
-				Responsible for conducting teaching sessions in flipped classroom model and grading of projects<br>
+				<b>Artificial Intelligence Computing Course (AICC)</b><br>
+				<ul>
+					<li>Designed to equip NUS Executive and Administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
+					<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
+				</ul>
 				<br><br>
 
 				<f3>Management Intern</f3><br>
 				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
 				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
-				Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
-				Attended professional training courses in assurance reporting and SAP modules<br>
-				Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks<br>
-				Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
+				<ul>
+					<li>Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability</li>
+					<li>Attended professional training courses in assurance reporting and SAP modules</li>
+					<li>Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks</li>
+				</ul>
+				<ul class="award" style="margin-top: 0;">
+					<li>Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion</li>
+				</ul>
 				<br><br>
 
 				<f3><b>Music Teacher</b></f3><br>
 				<f3>Cristofori</f3><br>
 				<div class="justifybox"><b>Dec 2017 - Jul 2018<div class="nav">Singapore</b></div></div>
-				Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre<br>
+				<ul>
+					<li>Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre</li>
+				</ul>
 				<br><br>
 
 				<f3>Campus Ambassador</f3><br>
 				<f3>Deutsche Bank</f3><br>
 				<div class="justifybox"><b>Aug 2016 - Aug 2017<div class="nav">Singapore</b></div></div>
-				Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank<br>
-				Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies<br>
+				<ul>
+					<li>Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank</li>
+					<li>Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies</li>
+				</ul>
 				<br><br>
 
 				<f3><b>Daycare Tutor</b></f3><br>
 				<f3>Dajin Daycare</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Apr 2015<div class="nav">Singapore</b></div></div>
-				Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate<br>
-				Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class<br>
+				<ul>
+					<li>Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate</li>
+					<li>Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class</li>
+				</ul>
 				<br><br>
 
 				<f3>Private Tutor</f3><br>
 				<div class="justifybox"><b>Dec 2014 - Oct 2015<div class="nav">Singapore</b></div></div>
-				Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science<br>
+				<ul>
+					<li>Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science</li>
+				</ul>
 				<br><br>
 			</div>
 		</div>
