--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 				<br><b>Call Centre Call Reduction Project (CCTR)</b><br>
 				<ul>
 					<li>Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
-					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours</li>
+					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours</li>
 					<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making</li>
 					<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
 				</ul>
-				<br><b>Forecast Reusable Asset (FORA)</b><br>
+				<br><b>Time Series Forecast Reusable Asset (FORA)</b><br>
 				<ul>
 					<li>Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
-					<li>Implemented end-to-end forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams</li>
+					<li>Implemented end-to-end forecasting and anomaly detection workflows with CBG, IBG teams across SG, HK teams to forecast trade volume, CASA balances and transactions, metrics related to cards onboarding and more</li>
 					<li>Held workshops, demonstrations, project presentations and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
 					<li>Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
 					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
@@ -53,9 +53,13 @@
 					<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
 					<li>Managed project deliverables, deployment plans and drove project to deployment in 6 months</li>
 				</ul>
+				<br><b>Audit Summarization Project</b><br>
+				<ul>
+					<li>Experimentation, evaluation and benchmarking for different models for NLP summarization task for Audit issues</li>
+				</ul>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				<ul>
-					<li>Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required</li>
+					<li>Formalized and implemented Feature Mart which automates feature creation for CBG data and standardizes processing required</li>
 				</ul>
 				<br><b>Other Projects</b><br>
 				<ul>
