Update technical skills

--- a/index.html
+++ b/index.html
@@ -138,17 +138,20 @@
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Programming Languages/Tools</f3><br>
-				Pyspark, Python (Dash, Kivy, Web Scaping), SQL (SQLite, PostgreSQL), R, Java, Go, MongoDB, Cypher<br>
+				Pyspark, Python (Kivy, Web Scaping), SQL (SQLite, PostgreSQL), R, Java, Go, MongoDB, Cypher<br>
 				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
-				Airflow, Kedro, MLflow, Jenkins, OpenShift
+				Airflow, Kedro, MLflow, Docker, Jenkins, OpenShift
 				<br><br>
 				<f3>Data Visualization, Optimization and Simulation Tools</f3><br>
 				AMPL, ExtendSim, Tableau, QGIS, DecisionVis, Disco (Fluxicon), Knime
 				<br><br>
 				<f3>Project Management</f3><br>
 				Jira, Git, Bitbucket, Confluence
+				<br><br>
+				<f3>Web and Mobile Development</f3><br>
+				Flask, Dash, Flutter, Dart
 				<br><br>
 				<f3>Microsoft Office</f3><br>
 				Microsoft Excel (Palisade, @Risk), Power Point, Visio, Word
