--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@
 				</ul>
 				<br><b>Mortgage Project</b><br>
 				<ul>
-					<li>Developed pricing model with multi-class classification to classify customer segments</li>
+					<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
 					<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
 					<li>Managed project deliverables, deployment plans and drove project to deployment in 6 months</li>
 				</ul>
 				<br><b>Audit Summarization Project</b><br>
 				<ul>
-					<li>Experimentation, evaluation and benchmarking for different models for NLP summarization task for Audit issues</li>
+					<li>Performed ideation, experimentation, evaluation and benchmarking of different models for NLP summarization task for Audit issues</li>
+				</ul>
+				<br><b>T&M FX Project</b><br>
+				<ul>
+					<li>Developed pipelines to automate campaign analysis, standardizing processing across 2 campaigns and 3 types of campaign analysis</li>
 				</ul>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				<ul>
@@ -82,6 +86,16 @@
 				<ul>
 					<li>Designed to equip NUS Executive and Administrative staff with basic knowledge of AI and experience in structuring projects with CRISP-DM framework</li>
 					<li>Responsible for conducting teaching sessions in flipped classroom model and grading of projects</li>
+				</ul>
+				<br><br>
+
+				<f3>Content Writer</f3><br>
+				<f3>Medium</f3><br>
+				<div class="justifybox"><b>Jan 2022 - Present<div class="nav">Singapore</b></div></div>
+				<b>Write about all things programming!</b><br>
+				<a href="https://kayjanwong.medium.com/">Click here to visit my profile</a><br>
+				<ul>
+					<li>Published on Towards Data Science, Python in Plain English</li>
 				</ul>
 				<br><br>
 
