--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 				</ul>
 				<br><b>Others</b><br>
 				<ul class="award">
-					<li>Spot Award recipient for 2021 Feb, Jun and Oct, and Star Award recipient for first half of 2021 for exemplary work performance</li>
+					<li>Spot Award recipient for 2021 Feb, Jun, Oct, and 2022 Apr for exemplary work performance</li>
+                                        <li>Star Award recipient for first half of 2021 for exemplary work performance</li>
 					<li>Second most active Coursera user, based on course completion, in the company in 2018</li>
 					<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard</li>
 				</ul>
