--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
 					<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
 				</ul>
-				<br><b>Mortgage Project</b><br>
+				<br><b>CBG Mortgage Project</b><br>
 				<ul>
 					<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
 					<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
