--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 				<br><b>Call Centre Call Reduction Project (CCTR)</b><br>
 				<ul>
-					<li>Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
-					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours</li>
-					<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making</li>
+					<li>Built, deployed, and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call</li>
+					<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage, and increase scalability, resulting in time savings of over 35 hours</li>
+					<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation, and drive decision making</li>
 					<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
 				</ul>
 				<br><b>Time Series Forecast Reusable Asset (FORA)</b><br>
 				<ul>
-					<li>Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
+					<li>Developed forecasting methods for time series, involving EDA, processing, models, and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins</li>
 					<li>Implemented end-to-end forecasting and anomaly detection workflows with CBG, IBG teams across SG, HK teams to forecast trade volume, CASA balances and transactions, metrics related to cards onboarding and more</li>
-					<li>Held workshops, demonstrations, project presentations and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
+					<li>Held workshops, demonstrations, project presentations, and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
 					<li>Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
 					<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
 					<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
@@ -51,11 +51,12 @@
 				<ul>
 					<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
 					<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
-					<li>Managed project deliverables, deployment plans and drove project to deployment in 6 months</li>
+					<li>Managed project deliverables, deployment plans, and drove project to deployment in 6 months</li>
 				</ul>
 				<br><b>Audit Summarization Project</b><br>
 				<ul>
-					<li>Performed ideation, experimentation, evaluation and benchmarking of different models for NLP summarization task for Audit issues</li>
+					<li>Performed ideation, experimentation, evaluation, and benchmarking of different models for NLP summarization task for Audit issues</li>
+                                        <li>Tested and deployed API solution on GPU in UAT</li>
 				</ul>
 				<br><b>T&M FX Project</b><br>
 				<ul>
